--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@
 
 <h2 id="recent-presentation-materials">Recent presentation materials:</h2>
 <ul>
-  <li><a href="https://www.youtube.com/live/0n2Cu5Uof5g"><u>Video</u></a> and <a href="/assets/smale-95.pdf"><u>slides</u></a> from a talk at <a href="https://simons.berkeley.edu/workshops/smale95-conference-honor-steve-smale"><u>Smale@95: A Conference in Honor of Steve Smale</u></a> “On Professor Smale’s legacy for asymptotic stability theory.”</li>
-  <li><a href="/assets/siam-ds-2025-slides-linearizability.pdf"><u>Slides</u></a> and a <a href="/assets/user-guide.pdf"><u>User's Guide to Slides</u></a> from a talk at SIAM DS 2025 on “When do Koopman embeddings exist?”</li>
+  <li><a href="https://www.youtube.com/live/0n2Cu5Uof5g"><u>Video</u></a> and <a href="/assets/smale-95.pdf"><u>slides</u></a> from a talk “On Professor Smale’s legacy for asymptotic stability theory” at <a href="https://simons.berkeley.edu/workshops/smale95-conference-honor-steve-smale"><u>Smale@95: A Conference in Honor of Steve Smale</u></a> in Berkeley, California.</li>
+  <li><a href="/assets/croatia-koopman-2025-slides-linearizability.pdf"><u>Slides</u></a> and a <a href="/assets/croatia-user-guide.pdf"><u>User's Guide to Slides</u></a> from a talk “When do Koopman embeddings exist?” at the workshop <a href="https://uniri.hr/en/science-and-research/koopman-operator-theory-fundamentals-approximations-and-applications/"><u>Koopman Operator Theory: Fundamentals, Approximations and Applications 2</u></a> in Cres, Croatia.</li>
 </ul>
 
 <!--
+* [<u>Slides</u>](/assets/siam-ds-2025-slides-linearizability.pdf) and a [<u>User's Guide to Slides</u>](/assets/user-guide.pdf) from a talk at SIAM DS 2025 on "When do Koopman embeddings exist?"
 * [<u>Slides</u>](/assets/u-delaware-slides.pdf) from a talk at the University of Delaware. Topic: identifying engineering (im)possibilities with geometry and topology. 
 * [<u>Slides</u>](/assets/cornell-2-21-2022.pdf) from the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems. 
 -->
