--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <h2 id="recent-presentation-materials">Recent presentation materials:</h2>
 <ul>
   <li><a href="https://www.youtube.com/live/0n2Cu5Uof5g"><u>Video</u></a> and <a href="/assets/smale-95.pdf"><u>slides</u></a> from a talk “On Professor Smale’s legacy for asymptotic stability theory” at <a href="https://simons.berkeley.edu/workshops/smale95-conference-honor-steve-smale"><u>Smale@95: A Conference in Honor of Steve Smale</u></a> in Berkeley, California.</li>
-  <li><a href="/assets/croatia-koopman-2025-slides-linearizability.pdf"><u>Slides</u></a> and a <a href="/assets/croatia-user-guide.pdf"><u>User's Guide to Slides</u></a> from a talk “When do Koopman embeddings exist?” at the workshop <a href="https://uniri.hr/en/science-and-research/koopman-operator-theory-fundamentals-approximations-and-applications/"><u>Koopman Operator Theory: Fundamentals, Approximations and Applications 2</u></a> in Cres, Croatia.</li>
+  <li><a href="https://www.youtube.com/watch?v=KICty0xGzFo&amp;list=PL0KBnbqbAz2UxS0Wze1z26SZX0e2wO1CT&amp;index=15"><u>Video</u></a>, <a href="/assets/croatia-koopman-2025-slides-linearizability.pdf"><u>slides</u></a> and a <a href="/assets/croatia-user-guide.pdf"><u>user's guide to slides</u></a> from a talk “When do Koopman embeddings exist?” at the workshop <a href="https://uniri.hr/en/science-and-research/koopman-operator-theory-fundamentals-approximations-and-applications/"><u>Koopman Operator Theory: Fundamentals, Approximations and Applications 2</u></a> in Cres, Croatia.</li>
 </ul>
 
 <!--
