--- a/research/index.html
+++ b/research/index.html
@@ -118,7 +118,7 @@
   <li>
     <p><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
   Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
-  Neural Computation, Accepted (2025). (outdated <a href="https://arxiv.org/abs/2203.04498"><u>arXiv</u></a>)</p>
+  Neural Computation (2025), pp. 1–47. (<a href="https://doi.org/10.1162/neco.a.32"><u>article</u></a>, outdated <a href="https://arxiv.org/abs/2203.04498"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Global linearization of asymptotically stable systems without hyperbolicity</strong>.<br />
