--- a/research/index.html
+++ b/research/index.html
@@ -89,6 +89,12 @@
     <p><strong>Differential topology of the spaces of asymptotically stable vector fields and Lyapunov functions</strong>.<br />
   Matthew D. Kvalheim.<br />
   (2025). (<a href="https://arxiv.org/abs/2503.10828"><u>arXiv</u></a>)</p>
+
+    <ul>
+      <li><strong>Autoencoding dynamics: topological limitations and capabilities</strong>.<br />
+  Matthew D. Kvalheim and Eduardo D. Sontag.<br />
+  (2025). (<a href="https://arxiv.org/abs/2511.04807"><u>arXiv</u></a>)</li>
+    </ul>
   </li>
   <li>
     <p><strong>Linearizability of flows by embeddings</strong>.<br />
