--- a/research/index.html
+++ b/research/index.html
@@ -124,7 +124,7 @@
   <li>
     <p><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
   Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
-  Neural Computation (2025), pp. 1–47. (<a href="https://doi.org/10.1162/neco.a.32"><u>article</u></a>, outdated <a href="https://arxiv.org/abs/2203.04498"><u>arXiv</u></a>)</p>
+  Neural Computation (2025), pp. 1–47. (<a href="https://doi.org/10.1162/neco.a.32"><u>article</u></a>, <a href="https://arxiv.org/abs/2203.04498"><u>outdated arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Global linearization of asymptotically stable systems without hyperbolicity</strong>.<br />
@@ -139,7 +139,7 @@
   <li>
     <p><strong>Phase response curves and the role of coordinates</strong>.<br />
  Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
- (2024). Biological Cybernetics, 118 (2024), pp. 311–330. (<a href="https://doi.org/10.1007/s00422-024-00997-w"><u>article</u></a>, outdated <a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
+ (2024). Biological Cybernetics, 118 (2024), pp. 311–330. (<a href="https://doi.org/10.1007/s00422-024-00997-w"><u>article</u></a>,  <a href="https://arxiv.org/abs/2111.06511"><u>outdated arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
