--- a/research/index.html
+++ b/research/index.html
@@ -163,17 +163,17 @@
   <li>
     <p><strong>Necessary conditions for feedback stabilization and safety</strong>.<br />
  Matthew D. Kvalheim and Daniel E. Koditschek.<br />
- Journal of Geometric Mechanics, 14.4 (2022), pp. 659-693. (<a href="https://www.aimsciences.org/article/doi/10.3934/jgm.2022013"><u>article</u></a>, <a href="https://arxiv.org/abs/2106.00215"><u>arXiv</u></a>)</p>
+ Journal of Geometric Mechanics, 14.4 (2022), pp. 659–693. (<a href="https://www.aimsciences.org/article/doi/10.3934/jgm.2022013"><u>article</u></a>, <a href="https://arxiv.org/abs/2106.00215"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.<br />
  Kaustav Chakraborty, Haodi Hu, Matthew D. Kvalheim, and Feifei Qian.<br />
- IEEE Robotics and Automation Letters, 7.4 (2022), pp. 8861-8868. (<a href="https://ieeexplore.ieee.org/document/9812503"><u>article</u></a>)</p>
+ IEEE Robotics and Automation Letters, 7.4 (2022), pp. 8861–8868. (<a href="https://ieeexplore.ieee.org/document/9812503"><u>article</u></a>)</p>
   </li>
   <li>
     <p><strong>Families of periodic orbits: closed 1-forms and global continuability</strong>.<br />
  Matthew D. Kvalheim and Anthony M. Bloch.<br />
- Journal of Differential Equations, 285 (2021), pp. 211-257. (<a href="https://www.sciencedirect.com/science/article/abs/pii/S0022039621001601"><u>article</u></a>, <a href="https://arxiv.org/abs/1906.03528"><u>arXiv</u></a>)</p>
+ Journal of Differential Equations, 285 (2021), pp. 211–257. (<a href="https://www.sciencedirect.com/science/article/abs/pii/S0022039621001601"><u>article</u></a>, <a href="https://arxiv.org/abs/1906.03528"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Existence and uniqueness of global Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
@@ -183,17 +183,17 @@
   <li>
     <p><strong>Conley’s fundamental theorem for a class of hybrid systems</strong>.<br />
  Matthew D. Kvalheim, Paul Gustafson, and Daniel E. Koditschek.<br />
- SIAM Journal on Applied Dynamical systems, 20.2 (2021), pp. 784-825. (<a href="https://epubs.siam.org/doi/abs/10.1137/20M1336576"><u>article</u></a>, <a href="https://arxiv.org/abs/2005.03217"><u>arXiv</u></a>)</p>
+ SIAM Journal on Applied Dynamical systems, 20.2 (2021), pp. 784–825. (<a href="https://epubs.siam.org/doi/abs/10.1137/20M1336576"><u>article</u></a>, <a href="https://arxiv.org/abs/2005.03217"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Gait modeling and optimization for the perturbed Stokes regime</strong>.<br />
 Matthew D. Kvalheim, Brian Bittner, and Shai Revzen.<br />
-Nonlinear Dynamics, 97.4 (2019), pp. 2249-2270. (<a href="https://link.springer.com/article/10.1007/s11071-019-05121-3"><u>article</u></a>, <a href="https://arxiv.org/abs/1906.04384"><u>arXiv</u></a>)</p>
+Nonlinear Dynamics, 97.4 (2019), pp. 2249–2270. (<a href="https://link.springer.com/article/10.1007/s11071-019-05121-3"><u>article</u></a>, <a href="https://arxiv.org/abs/1906.04384"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Global linearization and fiber bundle structure of invariant manifolds</strong>.<br />
 Jaap Eldering, Matthew D. Kvalheim, and Shai Revzen.<br />
-Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/article/10.1088/1361-6544/aaca8d"><u>article</u></a>, <a href="https://arxiv.org/abs/1711.03646"><u>arXiv</u></a>)</p>
+Nonlinearity, 31.9 (2018), pp. 4202–4245. (<a href="http://iopscience.iop.org/article/10.1088/1361-6544/aaca8d"><u>article</u></a>, <a href="https://arxiv.org/abs/1711.03646"><u>arXiv</u></a>)</p>
   </li>
 </ul>
 
@@ -204,21 +204,18 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
   <li>
     <p><strong>Relationships between necessary conditions for feedback stabilizability</strong>.<br />
   Matthew D. Kvalheim.<br />
-  Proceedings of the 2023 BIRS Workshop on Geometry, Topology and Control System Design, Accepted (2025). (<a href="https://arxiv.org/abs/2312.16752"><u>arXiv</u></a>)</p>
+  Geometry, Topology, and Control System Design: Proceedings of a Banff International Research Station Workshop (2025), pp. 167–179. (<a href="https://www.aimsciences.org/book/AM/volume/59"><u>book</u></a>, <a href="https://arxiv.org/abs/2312.16752"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>The role of symmetry in constructing geometric flat outputs for
   free-flying robotic systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
-  IEEE International Conference on Robotics and Automation, Accepted (2023). (<a href="https://arxiv.org/abs/2209.11869"><u>arXiv</u></a>)</p>
+  IEEE International Conference on Robotics and Automation (2023), pp. 12247–12253. (<a href="https://doi.org/10.1109/ICRA48891.2023.10160628"><u>article</u></a>, <a href="https://arxiv.org/abs/2209.11869"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Generic properties of Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
  Matthew D. Kvalheim, David Hong, and Shai Revzen.<br />
- IFAC-PapersOnline, 54.9 (2021), pp. 267-272. (<a href="https://www.sciencedirect.com/science/article/pii/S2405896321006443"><u>article</u></a>, <a href="https://arxiv.org/abs/2010.04008"><u>arXiv</u></a>)<br />
-<!--* **Reverse-engineering invariant manifolds with asymptotic phase**,
-with Shai Revzen,
-(2016). ([arXiv][3])--></p>
+ IFAC-PapersOnline, 54.9 (2021), pp. 267–272. (<a href="https://www.sciencedirect.com/science/article/pii/S2405896321006443"><u>article</u></a>, <a href="https://arxiv.org/abs/2010.04008"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Data-driven models of legged locomotion</strong>.<br />
