--- a/research/index.html
+++ b/research/index.html
@@ -96,11 +96,6 @@
   (2025). (<a href="https://arxiv.org/abs/2511.04807"><u>arXiv</u></a>)</p>
   </li>
   <li>
-    <p><strong>Linearizability of flows by embeddings</strong>.<br />
-  Matthew D. Kvalheim and Philip Arathoon.<br />
-  (2024). (<a href="https://arxiv.org/abs/2305.18288"><u>arXiv</u></a>)</p>
-  </li>
-  <li>
     <p><strong>Koopman embedding and super-linearization counterexamples with isolated equilibria</strong>.<br />
   Philip Arathoon and Matthew D. Kvalheim.<br />
   (2023). (<a href="https://arxiv.org/abs/2306.15126"><u>arXiv</u></a>)</p>
@@ -121,9 +116,14 @@
 
 <ul>
   <li>
+    <p><strong>Linearizability of flows by embeddings</strong>.<br />
+  Matthew D. Kvalheim and Philip Arathoon.<br />
+  Selecta Mathematica, Accepted (2025). (<a href="https://arxiv.org/abs/2305.18288"><u>arXiv</u></a>)</p>
+  </li>
+  <li>
     <p><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
   Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
-  Neural Computation (2025), pp. 1–47. (<a href="https://doi.org/10.1162/neco.a.32"><u>article</u></a>, <a href="https://arxiv.org/abs/2203.04498"><u>outdated arXiv</u></a>)</p>
+  Neural Computation, 37.12 (2025), pp. 2158–2204. (<a href="https://doi.org/10.1162/neco.a.32"><u>article</u></a>, <a href="https://arxiv.org/abs/2203.04498"><u>outdated arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Global linearization of asymptotically stable systems without hyperbolicity</strong>.<br />
