--- a/research/index.html
+++ b/research/index.html
@@ -138,7 +138,7 @@
   <li>
     <p><strong>Phase response curves and the role of coordinates</strong>.<br />
  Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
- (2024). Biological Cybernetics, 118 (2024), pp. 311–330. (<a href="https://doi.org/10.1007/s00422-024-00997-w"><u>article</u></a>,  <a href="https://arxiv.org/abs/2111.06511"><u>outdated arXiv</u></a>)</p>
+ Biological Cybernetics, 118 (2024), pp. 311–330. (<a href="https://doi.org/10.1007/s00422-024-00997-w"><u>article</u></a>,  <a href="https://arxiv.org/abs/2111.06511"><u>outdated arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
