--- a/research/index.html
+++ b/research/index.html
@@ -123,7 +123,7 @@
   <li>
     <p><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
   Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
-  Neural Computation, 37.12 (2025), pp. 2158–2204. (<a href="https://doi.org/10.1162/neco.a.32"><u>article</u></a>, <a href="https://arxiv.org/abs/2203.04498"><u>outdated arXiv</u></a>)</p>
+  <strong>Cover article</strong>, Neural Computation, 37.12 (2025), pp. 2158–2204. (<a href="https://doi.org/10.1162/neco.a.32"><u>article</u></a>, <a href="https://arxiv.org/abs/2203.04498"><u>outdated arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Global linearization of asymptotically stable systems without hyperbolicity</strong>.<br />
