--- a/research/index.html
+++ b/research/index.html
@@ -163,7 +163,8 @@
   <li>
     <p><strong>Necessary conditions for feedback stabilization and safety</strong>.<br />
  Matthew D. Kvalheim and Daniel E. Koditschek.<br />
- Journal of Geometric Mechanics, 14.4 (2022), pp. 659–693. (<a href="https://www.aimsciences.org/article/doi/10.3934/jgm.2022013"><u>article</u></a>, <a href="https://arxiv.org/abs/2106.00215"><u>arXiv</u></a>)</p>
+ Journal of Geometric Mechanics, 14.4 (2022), pp. 659–693. (<a href="https://www.aimsciences.org/article/doi/10.3934/jgm.2022013"><u>article</u></a>, <a href="https://arxiv.org/abs/2106.00215"><u>arXiv</u></a>)<br />
+ Invited contribution to special volume honoring Anthony M. Bloch</p>
   </li>
   <li>
     <p><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.<br />
